[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.25",
    "chromadb>=1.0.20",
    "email-validator>=2.3.0",
    "fpdf2>=2.8.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "numpy>=2.3.2",
    "openai==0.28",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
